# NumericMethods

./: CMakeLists.txt  README.md
MalhasHDiv4Spaces/: CMakeLists.txt  ConfigurateCase.cpp  ConfigurateCase.h  MalhasHdiv.cpp  MalhasHdivRefactor.cpp  TPZCondensedMeshAlgebra.cpp  TPZCondensedMeshAlgebra.h  TPZDistributedMeshAlgebra.h  TPZHdivTransfer.h  TPZMHMixedMesh4SpacesControl.cpp  TPZMHMixedMesh4SpacesControl.h  TPZMixedDarcyWithFourSpaces.cpp  TPZMixedDarcyWithFourSpaces.h  TPZPrintUtils.cpp
MalhasHdiv/: CMakeLists.txt  ConfigurateCase.cpp  ConfigurateCase.h  MalhasHdiv.cpp  MalhasHdiv3D.cpp  MalhasHdivRefactor.cpp  MalhasHdiv_old.cpp  RSimulationCase.h  ScenarioConfig.h  TPZCondensedMeshAlgebra.h  TPZDistributedMeshAlgebra.cpp  TPZDistributedMeshAlgebra.h  TPZHdivTransfer.cpp  TPZHdivTransfer.h  TPZMHMixedMesh4SpacesControl.cpp  TPZMHMixedMesh4SpacesControl.h  TPZMixedDarcyWithFourSpaces.cpp  TPZMixedDarcyWithFourSpaces.h  TPZPrintUtils.cpp  TPZPrintUtils.h
